objects/DocusignEmailTemplate__mdt/fields/ContactBody__c.field-meta.xml
<CustomField>
    <fullName>ContactBody__c</fullName>
    <label>Contact Berichttekst</label>
    <description>Berichttekst van de e-mail naar signer 2 (klant). Beschikbare placeholders: {quoteNumber}, {controleurName}, {contactName}, {documentWord}, {documentRef}.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>