objects/DocusignEmailTemplate__mdt/fields/ContactSubject__c.field-meta.xml
<CustomField>
    <fullName>ContactSubject__c</fullName>
    <label>Contact Onderwerp</label>
    <description>Onderwerpregel van de e-mail naar signer 2 (klant). Gebruik {quoteNumber} als placeholder voor het Q-nummer.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>