objects/DocusignEmailTemplate__mdt/fields/ControleurBody__c.field-meta.xml
<CustomField>
    <fullName>ControleurBody__c</fullName>
    <label>Controleur Berichttekst</label>
    <description>Berichttekst van de e-mail naar signer 1 (controleur). Beschikbare placeholders: {quoteNumber}, {controleurName}, {contactName}.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>