objects/DocusignEmailTemplate__mdt/fields/ControleurSubject__c.field-meta.xml
<CustomField>
    <fullName>ControleurSubject__c</fullName>
    <label>Controleur Onderwerp</label>
    <description>Onderwerpregel van de e-mail naar signer 1 (controleur). Gebruik {quoteNumber} als placeholder voor het Q-nummer.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>