objects/DocusignEmailTemplate__mdt/fields/RecordTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeDeveloperName__c</fullName>
    <label>Record Type Developer Name</label>
    <description>Sleutel voor opzoeken: vul de API-naam van het Case-recordtype in (bv. Used, Sales). Moet uniek zijn per record.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>